Update scripts to work with new TWS installation packaging TWS 452 onwards