@@ -1,13 +1,40 @@
+::   This command file starts the Interactive Brokers' Trader Workstation (TWS).
+
+@echo off
+setlocal enableextensions enabledelayedexpansion
+
+::   It's likely that the only thing you need to change in this file is the version
+::   number setting. 
+
+::   You can find the TWS major version number by running TWS, then clicking 
+::   Help > About Trader Workstation. In the displayed information you'll see a
+::   line like this:
+::
+::    Build 954.2a, Oct 30, 2015 4:07:54 PM
+::
+::   Here the major version number is 954. Do not include the rest of the version number in
+::   this setting:
+
+set TWS_MAJOR_VRSN=952
+
+
 ::   If your TWS user id and password are not included in the IBController 
-::   configuration file, set them here (do not encrypt the password):
+::   configuration file, set them here (do not encrypt the password). However
+::   You are strongly advised not to set them here since this file is not 
+::   normally in a protected location:
 
 set TWSUSERID=
 set TWSPASSWORD=
 
 
+::   The folder where TWS is installed:
+
+set TWS_PATH=C:\Jts
+
+
 ::   The folder containing the IBController files:
 
-set IBCDIR=C:\IBController
+set IBC_PATH=C:\IBController
 
 
 ::   The location and filename of the IBController configuration file. This file should
@@ -17,71 +44,9 @@ set IBCDIR=C:\IBController
 ::   environment variable to address the root of your personal filestore (HOMEPATH is set
 ::   automatically by Windows):
 
-set IBCINI="%HOMEPATH%\Documents\IBController\IBController.ini"
+set IBC_INI=%HOMEPATH%\Documents\IBController\IBController.ini
 
+::   now launch IBController
 
-::   The folder where TWS is installed:
-
-set TWSDIR=C:\Jts\
-
-
-::   The classpath for TWS. The value below is correct for version
-::   952 (you can verify which version of TWS you are using by going
-::   to the Help | About Trader Workstation menu in TWS).
-::
-::   For other versions of TWS, the information needed may be different.
-::   First, look in the folder where TWS is installed (typically C:\Jts).
-::   If this folder contains a file called StartTWS.bat, open the file with
-::   a text editor and look at the line beginning with START. Select 
-::   everything after "-cp " up to the first subsequent space character,
-::   then press Ctrl-C to copy it to the clipboard, then paste it into the
-::   "set TWSCP=" command below, replacing everything after the "=" character.
-::
-::   If the StartTWS.bat file doesn't exist, you'll need to look in  the 
-::   shortcut created when you installed TWS. How to find this depends on 
-::   which version of Windows you're using:
-::
-::   - Windows 7: right click on the start menu entry for TWS and click 
-::     'Properties'. 
-::
-::   - Windows 8: locate the tile for TWS in the start screen (or the 
-::     'all apps' screen), right click it, and select 'Open file location'
-::     on the menu bar at the bottom of the screen. Then right click on the
-::     highlighted entry in the File Explorer window, and click 'Properties'.
-::
-::   - Windows 8.1: locate the tile for TWS in the start screen (or the 
-::     'all apps' screen), right click it, and select 'Open file location'
-::     in the context menu. Then right click on the highlighted entry in the
-::     File Explorer window, and click 'Properties'.
-::
-::   - Windows 10: locate the tile for TWS in the start menu (or the 
-::     'all apps' list), right click it, and select 'Open file location'
-::     in the context menu. Then right click on the highlighted entry in
-::     the File Explorer window, and click 'Properties'.
-::
-::   In the field labelled 'Target', select everything after "-cp " up to the 
-::   first subsequent space character, then press Ctrl-C to copy it to the 
-::   clipboard, then paste it into the "set TWSCP=" command below, replacing
-::   everything after the "=" character:
-
-set TWSCP=jts.jar;total.2015b.jar
-
-
-::   Other Java VM options for TWS. You can find this information in the 
-::   START line in StartTWS.bat (or the shortcut created when you installed 
-::   TWS if StartTWS.bat doesn't exist). Note that jclient/LoginFrame is
-::   NOT part of the Java options, nor is anything that comes after it, 
-::   so don't include that here):
-
-set JAVAOPTS=-Dsun.java2d.noddraw=true -Dswing.boldMetal=false -Dsun.locale.formatasdefault=true -Xmx1024M -XX:MaxPermSize=256M
-
-
-pushd %TWSDIR%
-
-:: prevent other Java tools interfering with IBController
-setlocal
-set JAVA_TOOL_OPTIONS=
-
-%SystemDrive%\ProgramData\Oracle\Java\javapath\java.exe -cp  %TWSCP%;%IBCDIR%\IBController.jar %JAVAOPTS% ibcontroller.IBController %IBCINI% %TWSUSERID% %TWSPASSWORD%
-popd
+call Scripts\IBController.bat %TWS_MAJOR_VRSN% "/TwsPath:%TWS_PATH%" "/IbcPath:%IBC_PATH%" "/IbcIni:%IBC_INI%" /User:%TWSUSERID% /PW:%TWSPASSWORD%
 
